--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,23 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #252626;
+}
+
+h2 {
+  grid-column: 1/-1;
+  text-align: center;
+  font-family: "Red Rose", cursive;
+  font-size: 50px;
+  text-transform: uppercase;
+  background-image: linear-gradient(to right, #0fbab4, #78559e);
+  background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  margin: 10px 0;
 }
 
 code {
