--- a/src/components/services/services.styles.scss
+++ b/src/components/services/services.styles.scss
@@ -1,18 +1,25 @@
 .services {
-  background-color: rgba(120, 85, 158, 0.6);
-  padding: 2rem;
+  // background-color: rgba(120, 85, 158, 0.6);
+  padding: 2.5rem;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(120, 85, 156, 0.8),
+      rgba(120, 85, 156, 0.8)
+    ),
+    url("../../images/services.jpg");
+  background-size: cover;
 }
 
 .background {
   background-color: rgba(225, 225, 225, 0.5);
-  padding: 1px;
+  padding: 25px;
 }
 
 .design {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 1.5rem;
-  padding: 0 1.5rem;
+  grid-gap: 2rem;
+  padding: 0 2rem;
 }
 
 .item {
