--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -36,3 +36,11 @@
     }
   }
 }
+
+a {
+  transition: all 0.6s;
+  &:hover {
+    transform: scale(1.1);
+    background-color: rgba(120, 85, 156, 0.4);
+  }
+}
