--- a/src/components/form/form.styles.scss
+++ b/src/components/form/form.styles.scss
@@ -1,5 +1,5 @@
-$sub-color: grey;
-$main-color: black;
+$sub-color: #0fbab4;
+$main-color: white;
 
 @mixin shrinkLabel {
   top: -14px;
@@ -9,11 +9,11 @@ $main-color: black;
 
 .group {
   position: relative;
-  margin: 45px 0;
+  margin: 30px 0;
 
   .form-input {
     background: none;
-    background-color: white;
+    background-color: none;
     color: $sub-color;
     font-size: 18px;
     padding: 10px 10px 10px 5px;
@@ -26,6 +26,7 @@ $main-color: black;
 
     &:focus {
       outline: none;
+      border-bottom: 2px solid $sub-color;
     }
 
     &:focus ~ .form-input-label {
