--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.button {
+  width: 100px;
+  border-radius: 3px;
+  padding: 0.5rem 2rem;
+  background-color: rgba(15, 186, 180, 0.5);
+  border-style: none;
+  outline-color: rgba(15, 186, 180, 0.8);
+  font-size: 15px;
+  font-family: "Red Rose", cursive;
+  transition: all ease 0.3s;
+  cursor: pointer;
+}
+
+.button:hover {
+  transform: scale(1.2);
+  background-color: rgba(15, 186, 180, 0.8);
+}
