--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -6,6 +6,10 @@
 .contactbox {
   display: grid;
   grid-template-columns: 1fr 1fr;
+
+  @media only screen and (max-width: 600px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 #contact_form {
@@ -32,8 +36,16 @@
   display: flex;
   flex-direction: column;
 
+  @media only screen and (max-width: 600px) {
+    grid-row: 1/2;
+  }
+
   p {
     font-size: 1.5rem;
+
+    @media only screen and (max-width: 600px) {
+      font-size: 1.2rem;
+    }
   }
 
   h4 {
