--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -5,6 +5,10 @@
   grid-gap: 2rem;
   padding: 2rem;
 
+  @media only screen and (max-width: 800px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   a {
     text-decoration: none;
     color: inherit;
