--- a/src/components/skills/skills.styles.scss
+++ b/src/components/skills/skills.styles.scss
@@ -19,6 +19,11 @@
   perspective: 1000px;
   margin: 1rem;
   justify-self: center;
+
+  @media only screen and (max-width: 550px) {
+    width: 60px;
+    height: 60px;
+  }
 }
 
 .flip-card-inner {
@@ -56,6 +61,10 @@
 
   .img {
     width: 70px;
+
+    @media only screen and (max-width: 550px) {
+      width: 50px;
+    }
   }
 }
 
@@ -80,4 +89,9 @@
   left: -10px;
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 30px;
+
+  @media only screen and (max-width: 550px) {
+    width: 80px;
+    height: 80px;
+  }
 }
