--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -1,13 +1,17 @@
 .contact {
   background-color: #252626;
   padding: 1rem 3rem;
+
+  @media only screen and (max-width: 450px) {
+    padding: 1rem;
+  }
 }
 
 .contactbox {
   display: grid;
   grid-template-columns: 1fr 1fr;
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 768px) {
     grid-template-columns: 1fr;
   }
 }
@@ -28,6 +32,10 @@
 
   display: flex;
   justify-content: center;
+
+  @media only screen and (max-width: 450px) {
+    padding: 0.2rem;
+  }
 }
 
 .textbox {
@@ -36,14 +44,18 @@
   display: flex;
   flex-direction: column;
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 768px) {
     grid-row: 1/2;
+  }
+
+  @media only screen and (max-width: 450px) {
+    padding: 0.2rem;
   }
 
   p {
     font-size: 1.5rem;
 
-    @media only screen and (max-width: 600px) {
+    @media only screen and (max-width: 768px) {
       font-size: 1.2rem;
     }
   }
@@ -57,6 +69,10 @@
   display: flex;
   align-items: center;
   padding-left: 1.5rem;
+
+  @media only screen and (max-width: 450px) {
+    padding-left: 0rem;
+  }
 
   ion-icon {
     font-size: 20px;
