--- a/src/components/education/education.styles.scss
+++ b/src/components/education/education.styles.scss
@@ -1,8 +1,14 @@
 .img {
   width: 300px;
 
-  @media only screen and (max-width: 600px) {
-    width: 100%;
+  @media only screen and (max-width: 768px) {
+    width: 200px;
+    justify-self: center;
+    align-self: center;
+  }
+
+  @media only screen and (max-width: 450px) {
+    width: 150px;
   }
 }
 
@@ -11,8 +17,13 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 768px) {
     padding: 0.5rem 1rem;
+  }
+
+  @media only screen and (max-width: 450px) {
+    padding: 0.5rem 0.5rem;
+    grid-template-columns: 1fr;
   }
 
   .section {
@@ -23,6 +34,10 @@
       font-weight: bold;
       margin-right: 12px;
       font-size: 25px;
+
+      @media only screen and (max-width: 768px) {
+        font-size: 20px;
+      }
     }
 
     p {
