--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,27 +1,28 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
+.navbar {
+  font-size: 18px;
+  margin-bottom: -20px;
   background-image: url(../../images/background.jpg);
 }
 
-.navigation {
+img {
+  width: 100px;
 }
 
-.logobox {
-  float: left;
-  img {
-    width: 100px;
-  }
+.logo {
+  display: inline-block;
+  font-size: 22px;
 }
-.menu {
+
+.main-nav {
   list-style: none;
-  text-decoration: none;
-  display: flex;
+  margin-top: -20px;
 }
 
-.menu-item {
-  padding: 15px;
+.main-nav li {
+  text-align: center;
+  margin: 0 auto 15px;
+  list-style-type: none;
+  display: none;
   color: #252626;
   a {
     text-decoration: none;
@@ -31,8 +32,81 @@
       color: inherit;
     }
   }
+}
 
-  &:hover {
-    background-color: #0fbab4;
+.nav-links,
+.logo {
+  text-decoration: none;
+}
+
+.toggle {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  font-size: 40px;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:active {
+    border: none;
+  }
+}
+
+.active li {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 0;
+    height: 70px;
+    background-image: url(../../images/background.jpg);
+    padding: 10px;
+  }
+
+  .main-nav {
+    display: flex;
+    margin-right: 20px;
+    justify-content: flex-end;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    align-self: center;
+
+    li {
+      display: block;
+      padding: 15px;
+      color: #252626;
+      a {
+        text-decoration: none;
+        color: #252626;
+
+        &:visited {
+          color: inherit;
+        }
+      }
+
+      &:hover {
+        background-color: #0fbab4;
+      }
+    }
+  }
+
+  .nav-links {
+    margin-left: 40px;
+    display: block;
+  }
+  .logo {
+    margin-top: 0;
+  }
+  .toggle {
+    display: none;
   }
 }
