--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -9,6 +9,10 @@
     grid-template-columns: repeat(2, 1fr);
   }
 
+  @media only screen and (max-width: 550px) {
+    grid-template-columns: 1fr;
+  }
+
   a {
     text-decoration: none;
     color: inherit;
