--- a/src/components/services/services.styles.scss
+++ b/src/components/services/services.styles.scss
@@ -9,7 +9,7 @@
     url("../../images/services.jpg");
   background-size: cover;
 
-  @media only screen and (max-width: 550px) {
+  @media only screen and (max-width: 768px) {
     padding: 1.5rem;
   }
 }
@@ -25,8 +25,12 @@
   grid-gap: 2rem;
   padding: 0 2rem;
 
-  @media only screen and (max-width: 550px) {
+  @media only screen and (max-width: 768px) {
     grid-gap: 1rem;
+  }
+
+  @media only screen and (max-width: 450px) {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -43,18 +47,6 @@
   }
 }
 
-ion-icon {
-  font-size: 50px;
-
-  @media only screen and (max-width: 550px) {
-    font-size: 30px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-}
-
 .icon {
   background-image: url("../../images/background.jpg");
   border-radius: 50%;
@@ -63,7 +55,7 @@ ion-icon {
   align-self: center;
   position: relative;
 
-  @media only screen and (max-width: 550px) {
+  @media only screen and (max-width: 768px) {
     width: 80px;
     height: 80px;
   }
@@ -84,7 +76,7 @@ ion-icon {
   top: 10px;
   left: 10px;
 
-  @media only screen and (max-width: 550px) {
+  @media only screen and (max-width: 768px) {
     width: 60px;
     height: 60px;
   }
@@ -92,6 +84,18 @@ ion-icon {
   &:hover {
     box-shadow: 0 0 0 10px rgba(15, 186, 180, 0.2);
     background-color: #0fbab4;
+  }
+
+  ion-icon {
+    font-size: 50px;
+
+    @media only screen and (max-width: 768px) {
+      font-size: 30px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
 
