--- a/src/components/skills/skills.styles.scss
+++ b/src/components/skills/skills.styles.scss
@@ -10,6 +10,10 @@
     font-family: "Red Rose", cursive;
     font-size: 30px;
   }
+
+  @media only screen and (max-width: 768px) {
+    margin-top: -20px;
+  }
 }
 
 .flip-card {
@@ -20,7 +24,7 @@
   margin: 1rem;
   justify-self: center;
 
-  @media only screen and (max-width: 550px) {
+  @media only screen and (max-width: 768px) {
     width: 60px;
     height: 60px;
   }
@@ -62,7 +66,7 @@
   .img {
     width: 70px;
 
-    @media only screen and (max-width: 550px) {
+    @media only screen and (max-width: 768px) {
       width: 50px;
     }
   }
@@ -90,7 +94,7 @@
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 30px;
 
-  @media only screen and (max-width: 550px) {
+  @media only screen and (max-width: 768px) {
     width: 80px;
     height: 80px;
   }
