--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,12 @@ h2 {
   margin: 10px 0;
 }
 
+@media only screen and (max-width: 450px) {
+  h2 {
+    font-size: 40px;
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
