--- a/src/components/intro/intro.styles.scss
+++ b/src/components/intro/intro.styles.scss
@@ -29,6 +29,7 @@
     @media only screen and (max-width: 450px) {
       font-size: 50px;
       margin-bottom: 0px;
+      margin-top: 20px;
     }
   }
 }
