--- a/src/components/services/services.styles.scss
+++ b/src/components/services/services.styles.scss
@@ -12,6 +12,10 @@
   @media only screen and (max-width: 768px) {
     padding: 1.5rem;
   }
+
+  @media only screen and (max-width: 768px) {
+    padding: 1.3rem;
+  }
 }
 
 .background {
