--- a/src/components/education/education.styles.scss
+++ b/src/components/education/education.styles.scss
@@ -17,6 +17,8 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   overflow: hidden;
+  max-width: 1200px;
+  margin: 0 auto;
 
   @media only screen and (max-width: 768px) {
     padding: 0.5rem 1rem;
