--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,11 @@ h2 {
   font-family: "Red Rose", cursive;
   font-size: 50px;
   text-transform: uppercase;
-  background-image: linear-gradient(to right, #0fbab4, #78559e);
+  /* background-image: linear-gradient(to right, #0fbab4, #78559e);
   background-clip: text;
-  color: transparent;
+  color: transparent; */
+  color:rgba(15, 186, 180, 0.8);
+  -webkit-text-stroke: 1px white;
   letter-spacing: 4px;
   margin: 10px 0;
 }
