--- a/src/components/education/education.styles.scss
+++ b/src/components/education/education.styles.scss
@@ -31,7 +31,7 @@
 
   .section {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns:150px 1fr;
     padding: 1rem;
     .title {
       font-weight: bold;
