--- a/src/components/portfoliopage/portfolioPage.styles.scss
+++ b/src/components/portfoliopage/portfolioPage.styles.scss
@@ -4,10 +4,15 @@
 
   &__overview {
     justify-self: center;
+    align-self: center;
     padding: 1rem;
     @media only screen and (max-width: 768px) {
       grid-row: 2/3;
       grid-column: 1/-1;
+    }
+
+    img {
+      width:100%;
     }
   }
 
