--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -50,8 +50,8 @@
 
     img {
       width: 30px;
-      height: 30px;
-      max-height: 100%;
+      height: 30px !important;
+      max-height: 100% !important;
       justify-self: center;
       padding: 3px;
     }
