--- a/src/components/portfoliopage/portfolioPage.styles.scss
+++ b/src/components/portfoliopage/portfolioPage.styles.scss
@@ -2,6 +2,10 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 
+  &__mainImg {
+
+  }
+
   &__overview {
     justify-self: center;
     align-self: center;
@@ -13,6 +17,8 @@
 
     img {
       width:100%;
+      border-radius: 3px;
+      box-shadow: 0 .5rem 2rem rgba(0,0,0,.3);
     }
   }
 
