--- a/src/components/intro/intro.styles.scss
+++ b/src/components/intro/intro.styles.scss
@@ -1,17 +1,21 @@
 .greeting {
-  background-image: url(../../images/background.jpg);
-
   height: 100%;
-  padding: 0 5rem;
-  padding-bottom: 5rem;
   overflow: hidden;
+  position: relative;
 
-  @media only screen and (max-width: 768px) {
-    padding: 0 3.5rem;
+  &__img {
+    background-image: url(../../images/beach-sm.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-attachment: fixed;
   }
 
-  @media only screen and (max-width: 768px) {
-    padding: 0 2rem;
+  &__txt {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
   }
 
   &__title {
