--- a/src/components/projects/projects.styles.scss
+++ b/src/components/projects/projects.styles.scss
@@ -4,6 +4,10 @@
   justify-items: center;
   grid-gap: 2rem;
   padding: 2rem;
+  background-image: url(../../images/beach-sm.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  transition: 0.3s cubic-bezier(0.3, 0, 0, 1.3);
 
   @media only screen and (max-width: 800px) {
     grid-template-columns: repeat(2, 1fr);
@@ -26,7 +30,7 @@
 .project {
   display: grid;
   justify-items: center;
-  background-color: rgba(120, 85, 156, 0.2);
+  background-color: rgba(120, 85, 156, 1);
   padding: 1rem;
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.3);
   border-radius: 2px;
@@ -41,7 +45,7 @@
   transition: all 0.6s;
   &:hover {
     transform: scale(1.1);
-    background-color: rgba(120, 85, 156, 0.4);
+    background-color: rgba(120, 85, 156, 1);
   }
 
   .symbols {
@@ -49,11 +53,27 @@
     justify-content: center;
 
     img {
-      width: 30px;
-      height: 30px !important;
+      width: 20px;
+      height: 20px !important;
       max-height: 100% !important;
       justify-self: center;
       padding: 3px;
+    }
+  }
+
+  &__links {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+
+    &__link {
+      margin: 0.2rem;
+      padding: 0.5rem 1rem;
+      border: 2px solid #a2edf4;
+
+      &:hover {
+        background-color: #a2edf4;
+      }
     }
   }
 }
